tests/paczka1/fuzzy1/38607448.err
Error in line 2: /UGe A658 /1,9
Error in line 3: 3UGe A658 124,1
Error in line 7: gyE A658 74,8
Error in line 5: HUZ A658 64,5
Error in line 21: HUZ S693 34,9
Error in line 15: QcqaON A658 68,7
Error in line 27: QcqaON S384 93,1
Error in line 33: gyE A658 94,0
Error in line 36: gyE S457 81,1
